[package]
name = "quadrant"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10"
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
prost = "0.9"
cosmrs   = { version = "0.4",  features = ["rpc"] }
tokio    = { version = "1.15", features = ["full"] }
rusqlite = { version = "0.26", features = ["chrono"] }
clap     = { version = "3.0",  features = ["derive"] }
