[package]
name = "quadrant"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
sha2 = "0.10"
log = "0.4"
chrono = "0.4"
env_logger = "0.9"
prost = "0.9"
cosmrs   = { version = "0.4",  features = ["rpc"] }
clap     = { version = "3.0",  features = ["derive"] }

rusqlite = { version = "0.27", features = ["chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20"

tokio = { version = "1.15", features = ["full"] }
hyper = "0.14"
axum  = { version = "0.4", features = ["json"] }
serde = "1.0.136"
serde_json = "1.0.79"